<resources>
    <string name="app_name">commomAPI</string>

    <!-- Main menu -->
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="DataBinding">DataBinding</string>
    <string name="DataBindingObject">DataBinding Object</string>
    <string name="ButterKnife">Butter Knife</string>
    <string name="RealmDataBase">Realm DB</string>
    <string name="JavaLamda">Lamda code</string>
    <string name="Parcelable">Parcelable intent</string>
    <string name="Broadcast">Broadcast receiver</string>
    <string name="recyclerView">recycler view</string>
    <string name="mvvmActivity">MVVM</string>
    <string name="mvvmListActivity">MVVM List</string>
    <string name="capture_View">Capture view</string>
    <string name="Generic">Generic</string>
    <string name="openSource">openSource</string>
    <string name="serviceCall">ForegroundService</string>
    <string name="retrofit">retrofit Service</string>
    <string name="remoteConfig">Firebase Remote Config</string>
    <string name="TechActivity">technology view</string>
    <string name="BlueToothActivity">BlueTooth Scan</string>
    <string name="kakaoMap">Kakao Map</string>
    <string name="livedata">Live Data</string>
    <string name="Material">Material Design</string>
    <string name="pip">PIP</string>

    <!-- Butter Knife Button -->
    <string name="fragment_1">1 View</string>
    <string name="fragment_2">2 View</string>
    <string name="View_item_1">1 View item</string>
    <string name="capture_activity">Capture Activity</string>
    <string name="insertButton">입력</string>
    <string name="selectButton">조회</string>
    <string name="checkButton">확인</string>
    <string name="joinButton">접속</string>

    <!-- Butter Knife Fragment -->
    <string name="fragment_view_1">1 Fragment View</string>
    <string name="fragment_view_2">2 Fragment View</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- message -->
    <string name="insert_ok">현재화면을 캡쳐 했습니다.</string>

    <!-- Common Button -->
    <string name="move">이동</string>
    <string name="ns_menu_open">open</string>
    <string name="ns_menu_close">close</string>
    <!-- FCM -->
    <string name="default_notification_channel_id">message</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="fetch_remote_welcome_message">fetch remote welcome</string>

    <!-- permission -->
    <string name="please_write_externam_permission">캡쳐를 위해 저장소 권한에 동의 하셔야 합니다.</string>

    <!-- name -->
    <string name="name_android">Android</string>
    <string name="name_kotlin">Kotlin</string>
    <string name="name_quiz">Quiz</string>

    <!-- pip -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="fast_forward">Fast forward</string>
    <string name="fast_rewind">Fast rewind</string>
    <string name="minimize">Minimize</string>
    <string name="title_bigbuckbunny">Big Buck Bunny</string>
    <string name="info">Info</string>
    <string name="info_description">Information about this video</string>
    <string name="info_uri" translatable="false">https://peach.blender.org/</string>
</resources>

