<?xml version="1.0" encoding="utf-8"?><!--
  ~ Create by SangKwon on 2019. 7. 8.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".butter.ButterActivity">


    <TextView
        android:id="@+id/txt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_1" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_2" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_item_1" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_butter"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>