<?xml version="1.0" encoding="utf-8"?><!--
  ~ Create by SangKwon on 2019. 9. 17.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="md.ysk5898.com.SplashActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SplashActivity">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/name_android"
                    android:onClick="@{activity::onClick}"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_kotlin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/name_kotlin"
                    android:onClick="@{activity::onClick}"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_quiz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/name_quiz"
                android:onClick="@{activity::onClick}"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</layout>