<?xml version="1.0" encoding="utf-8"?><!--
  ~ Create by SangKwon on 2019. 10. 15.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="md.ysk5898.quiz.QuizActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="md.ysk5898.quiz.QuizActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="첫번째 퀴즈"
                    android:textColor="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/insertButton"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/txt_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{activity::onClick}"
                    android:text="@string/checkButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="두번째 퀴즈"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{activity::onClick}"
                    android:text="@string/joinButton" />


                <TextView
                    android:id="@+id/txt_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="세번째 퀴즈"
                    android:textColor="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/insertButton"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/txt_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{activity::onClick}"
                    android:text="@string/checkButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="네번째 퀴즈"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{activity::onClick}"
                    android:text="@string/selectButton" />

                <TextView
                    android:id="@+id/txt_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="다섯번째 퀴즈"
                    android:textColor="@color/colorPrimaryDark" />

                <EditText
                    android:id="@+id/edt_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insertButton" />

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{activity::onClick}"
                    android:text="@string/checkButton" />

                <TextView
                    android:id="@+id/txt_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="여섯번째 퀴즈"
                    android:textColor="@color/colorPrimaryDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/insertButton"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/txt_6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{activity::onClick}"
                    android:text="@string/checkButton" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>